# sputnik

./: README.md  example_multiband_usage.py  pyproject.toml
analysis/: __init__.py  api.py  road_segmentation.py
analysis/land_segmentation/: README.md  __init__.py  config.py  datasets.py  evaluate.py  predict.py  requirements.txt  train.py  transforms.py  utils.py
analysis/land_segmentation/archive/: predict_helpers.py  test.ipynb  train.ipynb
analysis/land_segmentation/examples/: example_dataset_inference.py  example_predict.py  example_timeseries.py  example_train.py
copernicus_utils/: collection.py  copernicus_api.py  get_api_key.py  image_processing.py  jp_processing.py  manager.py
data/: monuments.csv
data/collections/Zvarivank/metadata/: 2015-08-21T07-50-06_027000Z__46_153049_39_037053_46_207037_39_061982.json  2015-11-16T07-41-52_031000Z__46_153049_39_037053_46_207037_39_061982.json  2015-12-19T07-53-32_030000Z__46_153049_39_037053_46_207037_39_061982.json  2016-02-17T07-50-02_030000Z__46_153049_39_037053_46_207037_39_061982.json  2016-04-07T07-45-52_030000Z__46_153049_39_037053_46_207037_39_061982.json  2016-05-27T07-49-42_027000Z__46_153049_39_037053_46_207037_39_061982.json  2016-07-03T07-36-12_026000Z__46_153049_39_037053_46_207037_39_061982.json  2016-08-05T07-46-12_026000Z__46_153049_39_037053_46_207037_39_061982.json  2016-09-04T07-49-42_026000Z__46_153049_39_037053_46_207037_39_061982.json  2016-10-14T07-49-32_026000Z__46_153049_39_037053_46_207037_39_061982.json  2016-11-13T07-51-52_026000Z__46_153049_39_037053_46_207037_39_061982.json  (+205 more)
