[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sputnik"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.0",
  "PyYAML>=6.0",
  "Pillow==11.1.0",
  "rasterio>=1.4.3",
  "fastapi>=0.111.0",
  "torch>=2.3.0",
  "transformers>=4.38.0",
  "uvicorn[standard]>=0.30.0",
]

[tool.setuptools.packages.find]
include = ["copernicus_utils*", "analysis*"]
exclude = ["data*", "tests*"]
